--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Configuration Start: Please customize following configuration -->
-        <title>布丁布丁吃什麼？</title>
+        <title>我的大學生活</title>
         <!-- Configuration End -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,21 +12,21 @@
     <body>
         <div id="content">
             <div class="content-container">
-                <img src="spin.svg" />
-                <div>
-                    <!-- Configuration Start: Please customize following configuration -->
-                    <h1>布丁布丁吃什麼？</h1>
-                    <div class="description"><span>我不是在實驗室<br />就是在前往實驗室的路上</span></div>
+              <p><img src="spin.svg" width="97" height="78"></p>
+              <div>
+                  <!-- Configuration Start: Please customize following configuration -->
+                <h1>我的大學生活</h1>
+                    <div class="description"><span>一個來自澳門的女生<br />在台灣的生活</span></div>
                     <!-- Configuration End -->
-                </div>
-            </div>
+              </div>
+          </div>
         </div>
         <div class="footer" id="footer">
 <div class="container clearfix">
 <p>
 <span class="blog-copyright">
     <!-- Configuration Start: Please customize following configuration -->
-    © Copyright 2017 <a href="http://blog.pulipuli.info/">布丁布丁吃什麼？</a>
+    © Copyright 2019 <a href="http://web.ntnu.edu.tw/~40620240L/107-2">我的大學生活</a>
     <!-- Configuration End -->
 </span>
 </p>
@@ -46,7 +46,7 @@
                         location.href = "offline.html";
                     } else {
                         // <!-- Configuration Start: Please customize following configuration -->
-                        location.replace("http://blog.pulipuli.info/");
+                        location.replace("http://web.ntnu.edu.tw/~40620240L/107-2");
                         // <!-- Configuration End -->
                     }
                 }
